--- a/.github/workflows/main_msdocs-expressjs-mongodb-1337.yml
+++ b/.github/workflows/main_msdocs-expressjs-mongodb-1337.yml
@@ -23,8 +23,8 @@ jobs:
         run: |
           cd mern/server
           npm install
-          npm run build --if-present
-          npm run test --if-present       
+          # npm run build --if-present
+          # npm run test --if-present       
       
       # - name: Install npm packages, build then copy files - client
       #   run: |
