--- a/.github/workflows/main_msdocs-expressjs-mongodb-1337.yml
+++ b/.github/workflows/main_msdocs-expressjs-mongodb-1337.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: mern-app
-          path: mern/server
+          path: mern/server/mern-app.zip
 
   deploy:
     runs-on: ubuntu-latest
