--- a/.github/workflows/main_msdocs-expressjs-mongodb-1337.yml
+++ b/.github/workflows/main_msdocs-expressjs-mongodb-1337.yml
@@ -4,10 +4,11 @@
 name: Build and deploy Node.js app to Azure Web App - msdocs-expressjs-mongodb-1337
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
+  
 
 jobs:
   build:
